# gh-pydantic-ai

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: lint.yml  publish.yml
gh_pydantic_ai/: __init__.py  __main__.py  agent.py  agent_cli.py  auth.py  cli.py  client.py  consts.py  headers.py  model.py  provider.py  types.py
